<resources>
    <string name="app_name">2048</string>
    <string name="_2048">2048</string>
    <string name="score">Score</string>
    <string name="record">Record</string>
    <string name="tv_info">There will be a set of squares that you need to add to each other if the numbers are the same, then it is added.\nBreak records of luck)</string>
    <string name="by_sultandev">by SultanDev</string>
    <string name="about">About</string>
    <string name="music">Music</string>
    <string name="setting">Setting</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="game_over">Game Over</string>
    <string name="game_over_title">Do you want to play again?</string>
    <string name="win">Win</string>
</resources>