<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/app_color"
    android:minWidth="300dp"
    app:cardCornerRadius="18dp"
    app:cardElevation="12dp"
    >

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="12dp"
        >

        <TextView
            android:id="@+id/tvGameOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/text_font_new_style"
            android:text="@string/win"
            android:textColor="@color/green"
            android:textSize="22sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_large"
            android:fontFamily="@font/text_font_medium"
            android:text="@string/game_over_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="@dimen/margin_standard"
            >

            <TextView
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_header_container"
                android:fontFamily="@font/text_font_medium"
                android:gravity="center"
                android:padding="@dimen/margin_small"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_header_container"
                android:fontFamily="@font/text_font_medium"
                android:gravity="center"
                android:padding="@dimen/margin_small"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>