<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_color"
    android:padding="12dp"
    >

    <ImageView
        android:id="@+id/iconBack"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:padding="@dimen/margin_small"
        android:src="@drawable/ic_back"
        />

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconBack"
        android:text="@string/about"
        android:textColor="@color/white"
        android:fontFamily="@font/text_font_new_style"
        android:textSize="@dimen/text_size_about"
        android:layout_marginVertical="@dimen/margin_large" />

    <View
        android:id="@+id/line"
        android:layout_width="30dp"
        android:layout_height="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvAbout"
        app:layout_constraintStart_toStartOf="@id/tvAbout"
        app:layout_constraintEnd_toEndOf="@id/tvAbout"
        android:background="@color/white"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:text="@string/tv_info"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:fontFamily="@font/text_font_medium"
        android:layout_marginVertical="@dimen/margin_standard" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/by_sultandev"
        android:textSize="18sp"
        android:fontFamily="@font/text_font_medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="@dimen/margin_standard" />

</androidx.constraintlayout.widget.ConstraintLayout>